Prevent unwanted stretching of buttons in Bases-Layout form

--- a/src/BasesLayoutForm.css
+++ b/src/BasesLayoutForm.css
@@ -3,7 +3,8 @@
 .layout-controls {
   margin-top: 29px;
 
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .bases-layout-form {
